<resources>
    <string name="app_name">ClimberBux</string>
    <string name="action_settings">Settings</string>

    <!--For main activity-->
    <string name="climbers">Climbers</string>
    <string name="training">Training</string>
    <string name="training_on_dates">Training on dates</string>
    <string name="sum_of_income">Sum of income</string>

    <!--For climber activity-->
    <string name="dash_in_age_for_zero">—</string>

    <!--For editor activity-->
    <string name="name">Name</string>
    <string name="age">Age</string>

    <string name="unknown">Unknown</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="br">b/r</string>
    <string name="three">3</string>
    <string name="tow">2</string>
    <string name="one">1</string>
    <string name="kms">KMS</string>
    <string name="ms">MS</string>

    <string name="single">Single</string>
    <string name="subscription">Subscription</string>
    <string name="certificate">Certificate</string>
    <string name="special">Special</string>

    <string name="add_a_climber_title">Add a Climber</string>
    <string name="edit_climber_title">Edit Climber</string>

    <string name="error_saving_climber_toast">Error with saving climber</string>
    <string name="saved_climber_toast">Climber saved</string>
    <string name="error_updating_climber_toast">Error with updating climber</string>
    <string name="updated_climber_toast">Climber updated</string>
    <string name="error_deleting_climber_toast">Error with deleting climber</string>
    <string name="deleted_climber_toast">Climber deleted</string>

    <!--For income activity-->
    <string name="for_gran">For Gran:</string>
    <string name="for_me">For Me:</string>
    <string name="this_month">This month</string>
    <string name="last_month">Last month</string>

    <!--For training activity-->
    <string name="date_of_training">Date of training</string>
    <string name="end_of_training">End of training</string>
    <string name="empty_training">Training empty yet. Press plus to add any climber.</string>


    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="gender">gender</string>
    <string name="end_of_training_dialog_massage">Are you sure you want to finish the training</string>
    <string name="cancel">Cancel</string>
    <string name="settings_single_cost_key">single_cost</string>
    <string name="settings_subscription_cost_key">subscription_cost</string>
    <string name="edit_field">Edit field</string>
    <string name="save_payment_or_remove_climber">Save new payment or Remove a climber from the training?</string>
    <string name="payment_to_gran">Payment to Gran</string>
    <string name="non_payment">0</string>
    <string name="payment_to_me">Payment to Me</string>
    <string name="save_button">Save</string>
    <string name="remove_button">Remove</string>
    <string name="choose_a_date_title">Choose a date</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="calendar_december">0</string>
    <string name="december">12</string>
    <string name="payments_activity_editor">Payments:</string>
    <string name="income">Income:</string>
    <string name="payed_text">Payed:</string>
    <string name="pref_key_single_cost">single_cost</string>
    <string name="pref_title_single_cost">Single cost</string>
    <string name="pref_default_value_single_cost">200</string>
    <string name="pref_key_subscription_cost">subscription_cost</string>
    <string name="pref_default_value_subscription_cost">1600</string>
    <string name="pref_title_subscription_cost">Subscription cost</string>
    <string name="training_on_date">Training on \</string>
    <string name="delete_climber_dialog_massage">Are you sure you want to delete the climber</string>
    <string name="delete_climber">Delete Climber</string>

</resources>
